kubernetes/servers-test/server-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: server
  name: server
spec:
  containers:
  - command:
    - sleep
    - '86400'
    image: alpine:3.8
    imagePullPolicy: IfNotPresent
    name: server
    ports:
    - containerPort: 80
      protocol: TCP
    resources:
      limits:
        cpu: 1000m
        memory: 1024M
      requests:
        cpu: 100m
        memory: 64M
    volumeMounts:
    - mountPath: /shared
      name: shared
  nodeSelector:
    beta.kubernetes.io/os: linux
  restartPolicy: Never
  volumes:
  - hostPath:
      path: /shared
    name: shared
