kubernetes/servers-test/servers-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: server
    matchLabels: server
  name: server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - command:
        - sleep
        - '86400'
        image: centos:7
        imagePullPolicy: IfNotPresent
        name: server
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          limits:
            cpu: 1000m
            memory: 1024M
          requests:
            cpu: 100m
            memory: 64M
        volumeMounts:
        - mountPath: /shared
          name: shared
      nodeSelector:
        kubernetes.io/hostname: hotdog.local
      terminationGracePeriodSeconds: 10
      volumes:
      - hostPath:
          path: /shared
        name: shared
