kubernetes/servers-test/servers-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: servers
  name: servers-headless
spec:
  clusterIP: None
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: server
  type: ClusterIP
