kubernetes/servers-test/servers-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: server
spec:
  rules:
  - host: server.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: server
          servicePort: 80
  tls:
  - secretName: example.com
